# post-system-rust

./: .gitignore  .vimspector.json  Cargo.toml  README.md
post-system-service/: Cargo.toml
post_system_service/: Cargo.toml
post_system_service/src/: abstraction.rs  extension.rs  lib.rs  main.rs
project/: Cargo.toml
project/core/: Cargo.toml
project/core/src/: lib.rs  prelude.rs  static_data.rs
project/core/src/api/: forwarder_api.rs  json_data_api.rs  mod.rs
project/core/src/common/: error_handling.rs  http_response.rs  logger.rs  mod.rs
project/hyper_microservice/: Cargo.toml
project/hyper_microservice/src/: lib.rs  main.rs
project/hyper_microservice/src/api/: forwarder_api.rs  json_data_api.rs  mod.rs
project/infrastructure/: Cargo.toml
tls-certs/: CA.key  CA.pem  CA.srl  gen-localhost-certificates.sh
tls-certs/localhost/: localhost.crt  localhost.csr  localhost.decrypted.key  localhost.key
