[package]
name = "post_system_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
warp = { version = "0.3.1", features = ["tls"] }
serde = "1.0.129"
serde_json = "1.0.66"
serde_derive = "1.0.129"

tracing = "0.1.26"
tracing-subscriber = "0.2.20"