[package]
name = "core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
routerify = "2"
# futures = "0.3"
futures-util = "0.3"
serde = "1"
serde_json = "1"