[package]
name = "hyper_microservice"
version = "0.1.0"
authors = ["TRAN HUU DUC <duc.tran@doitsu.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
core = {path = "../core"}
routerify = "2"
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1"