[package]
name = "hyper_microservice"
version = "0.1.0"
authors = ["TRAN HUU DUC <duc.tran@doitsu.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
routerify = "2"
serde = "1"
serde_json = "1"

log = "0.4"
env_logger = "0.9.0"
core = {path = "../core"}